fix vertical paragraph spacing for markdowns

--- a/src/scss/layout/_PageLayout.scss
+++ b/src/scss/layout/_PageLayout.scss
@@ -55,10 +55,9 @@
         h2 {
           padding: 20px 0px;
           color: grey;
-          cursor: default;
         }
         p {
-          cursor: default;
+          margin-bottom: 20px;
         }
       }
     }
