--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -52,7 +52,7 @@ body {
   p, h1, h2, h3, h4, h5, h6, li {
     margin: 0;
     padding: 0;
-    @include user-select(none);
+    cursor: text;
   }
 
   p {
